# rstudio

src/cpp/conf/: rserver-dev.conf  rsession-dev.conf
src/cpp/core/: FilePath.cpp
src/cpp/core/include/core/: BoostFilesystem.hpp  FileLogWriter.hpp
src/cpp/core/include/core/process/: Process.hpp
src/cpp/core/process/: Process.cpp
src/cpp/desktop/: DesktopApplicationLaunch.hpp  DesktopMain.cpp  DesktopPosixApplicationLaunch.cpp
src/cpp/supervisor/: CMakeLists.txt  SupervisorMain.cpp
